Update Globalscape Fav (#51)
* Update index.html

* Update style.css

* Update App.js

* Update Dashboard.js

* Update Dive.js

* Update DivePower.js

* Update EnterpriseConnect.js

* Update ThreadConnect.js

* Update CenterHeader.js

* Update Sidebar.js

* Add files via upload

* Update NewEngagementRequest.js

* Update Dashboard.js

* Update style.css

* Update Sidebar.js

* Updated logos and aligned

* Update style.css

* New Dive fav

* New EC Fav

* New TC Fav

* Globalscape fav

* Added Axios for API call

* Added Post submit successful msg css

* Engagement form changes

* Fix build

* Define Header

* Fix Build

* added email

* New Logo

* Update Dashboard.js

* Update Dive.js

* Update DivePower.js

* Update EnterpriseConnect.js

* Update ThreadConnect.js

* Update custom.js

* Update index.html

* Update style.css

* Update index.html

* Update App.js

* Update Dashboard.js

* TC Logo

* Update ThreadConnect.js

* Update CenterHeader.js

* Update Sidebar.js

* Carousal Component

* Bug Fix

* Update App.js

* Update Dashboard.js

* Update ThreadConnect.js

* Update Carousal.js

* Update CenterHeader.js

* Update Sidebar.js

* Update App.js

* Update Dashboard.js

* Update Dashboard.js

* Update ThreadConnect.js

* Update Carousal.js

* Added React Bootstrap and Polyfill

* new carousel changes

* Update App.js

* Carousal Changes

* Carousel Changes

* Update ThreadConnect.js

* Embedded Smartsheet

* Update package.json

* Carousel Comp

* User Management

* CustomCarousel

* CustomCarousel

* Update custom.js

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "protractor": "^5.4.2",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
-        "typescript": "^3.7.3"
+        "typescript": "^3.7.3",
+        "react-bootstrap": "^1.6.1"
     },
     "scripts": {
         "preinstall": "npx npm-force-resolutions",
