--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "@babel/plugin-transform-async-to-generator": "7.14.5",
     "@babel/plugin-transform-runtime": "7.15.0",
     "@babel/preset-env": "7.15.0",
-    "@babel/preset-react": "7.14.5",    
-    "mini-css-extract-plugin": "2.2.0",
+    "@babel/preset-react": "7.14.5",
     "babel-loader": "8.2.2",
     "css-loader": "6.2.0",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.3.2",
+    "jshint": "2.11.1",
+    "mini-css-extract-plugin": "2.2.0",
     "postcss": "8.3.6",
     "postcss-loader": "6.1.1",
     "react": "17.0.2",
