--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node_modules/.bin/webpack serve --mode development --open --hot",
+    "preinstall": "npx npm-force-resolutions",
+    "test": "nyc cross-env NODE_ENV=test jasmine",
+    "coverage": "nyc --reporter=lcov --reporter=text-lcov npm test",
+    "jshint": "jshint src/",
     "build": "node_modules/.bin/webpack --config webpack.config.js --mode production"
   },
   "author": "Shubham Paskanti",
@@ -13,7 +17,7 @@
     "css-loader": "6.2.0",
     "highcharts": "9.2.0",
     "moment": "2.29.1",
-    "moment-timezone": "0.5.33",
+    "moment-timezone": "0.5.33",    
     "node-sass": "6.0.1",
     "react": "17.0.2",
     "react-bootstrap": "1.6.1",
@@ -33,7 +37,6 @@
     "css-loader": "6.2.0",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.3.2",
-    "jshint": "2.11.1",
     "mini-css-extract-plugin": "2.2.0",
     "postcss": "8.3.6",
     "postcss-loader": "6.1.1",
@@ -44,6 +47,28 @@
     "url-loader": "4.1.1",
     "webpack": "5.50.0",
     "webpack-cli": "4.8.0",
-    "webpack-dev-server": "3.11.2"
+    "webpack-dev-server": "3.11.2",
+    "braces": "3.0.2",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
+    "fetch-mock": "9.0.0-beta.2",
+    "ignore-styles": "5.0.1",
+    "jasmine": "3.5.0",
+    "jshint": "2.11.1",
+    "@babel/register": "7.15.3",
+    "bower": "1.8.8",
+    "cross-env": "6.0.0",
+    "jasmine-enzyme": "7.1.1",
+    "jsdom": "16.4.0",
+    "node-fetch": "2.6.1",
+    "node-sass": "6.0.1",
+    "nyc": "14.1.1",
+    "protractor": "5.4.2",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.7.0",
+    "kind-of": "6.0.3",
+    "live-server": "1.2.1",
+    "minimist": "1.2.5",
+    "react-test-renderer": "16.9.0"
   }
 }
