--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "css-loader": "6.2.0",
     "highcharts": "9.2.0",
     "moment": "2.29.1",
-    "moment-timezone": "0.5.33",    
+    "moment-timezone": "0.5.33",
     "node-sass": "6.0.1",
     "react": "17.0.2",
     "react-bootstrap": "1.6.1",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
+    "react-router-dom": "5.2.0",
     "sass-loader": "12.1.0",
     "style-loader": "3.2.1",
     "uuid": "8.3.2"
