--- a/.github/workflows/v1beta.yml
+++ b/.github/workflows/v1beta.yml
@@ -19,16 +19,18 @@ jobs:
     - uses: actions/checkout@v2
     - name: uitest
       id: uitest
-      run: npm install && npm test && npm run build && tree .
+      run: npm install && npm test && npm run build && tree build
 
     - name: Push Build Artifacts
       if: github.event_name == 'push'
       run: |
           git config user.name "Shubham Paskanti"
           git config user.email "<spaskanti1@gmail.com>"
+          git mv build webui-assets
           git add webui-assets
           git commit -m "Build Commit"
           git push origin v1beta
+          tree webui-assets
     - name: prmerged
       if: github.event_name == 'push'
       id: prmerged
