--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "author": "Shubham Paskanti",
   "license": "ISC",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "highcharts": "9.2.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.33",
