--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DC-Portal UI based on Bootstrap and REACT",
   "private": true,
   "scripts": {
-    "start": " set PORT=3011 && react-scripts start",
+    "start": "set PORT=3011 && react-scripts start",
     "build": "react-scripts build",
     "preinstall": "npx npm-force-resolutions",
     "test": "nyc cross-env NODE_ENV=test jasmine",
@@ -20,16 +20,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "highcharts": "9.2.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.33",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-bootstrap": "1.6.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "uuid": "8.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "1.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.15.0",
@@ -70,7 +72,15 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "eqeqeq": "off",
+      "no-unused-vars": "off",
+      "no-useless-constructor": "off",
+      "jsx-a11y/anchor-is-valid": "off",
+      "jsx-a11y/role-supports-aria-props": "off",
+      "react/jsx-no-target-blank": "off"
+    }
   },
   "browserslist": {
     "production": [
