--- a/.github/workflows/v1beta.yml
+++ b/.github/workflows/v1beta.yml
@@ -22,22 +22,19 @@ jobs:
     - name: uitest
       id: uitest
       run: npm install && npm test && npm run build && tree build
-
     - name: Push Build Artifacts
       if: github.event_name == 'push'
-      run: |
-          git config user.name "Shubham Paskanti"
-          git config user.email "<spaskanti1@gmail.com>"
-          git add -f build
-          git commit -m "Build Commit"
-          git push origin v1beta
-          git mv build webui-assets
-          git add -f webui-assets
-          git commit -m "webui-assets Commit"
-          git push origin v1beta
-          tree webui-assets
+      uses: ec-release/github-action-copy-files-folders-to-another-repos@main
+      env:
+        API_TOKEN_GITHUB: ${{ secrets.DC_GITHUB_TKN }}
+        GIT_USEREMAIL: ${{ secrets.DC_GITHUB_EMAIL }}
+        GIT_USERNAME: ${{ secrets.DC_GITHUB_USER }}
+      with:
+        SOURCE_DIR: 'build'
+        DESTINATION_REPOS_BRANCHES: 'github.com/dc-release/dc-portal.git:disty'
+        COMMIT_MESSAGE: 'DC Bot Deployment'
     - name: prmerged
       if: github.event_name == 'push'
       id: prmerged
       run: |
-          echo pr has been merged and closed
+        echo pr has been merged and closed
