--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "homepage": "v1.2beta/assets",
   "scripts": {
-    "start": "cross-env REACT_APP_BASEURL=/ PUBLIC_URL=/ react-scripts start",
+    "start": "cross-env PORT=3011 REACT_APP_BASEURL=/ PUBLIC_URL=/ react-scripts start",
     "build": "cross-env REACT_APP_BASEURL=/v1.2beta/dcsc react-scripts build",
     "preinstall": "npx npm-force-resolutions",
     "test": "nyc cross-env NODE_ENV=test jasmine",
