--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-data-table-component": "^6.11.8",
     "react-dom": "17.0.2",
-    "react-loader-spinner": "4.0.0",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
@@ -91,8 +91,8 @@
       "jsx-a11y/anchor-is-valid": "off",
       "jsx-a11y/role-supports-aria-props": "off",
       "react/jsx-no-target-blank": "off",
-      "no-useless-concat":"off",
-      "react-hooks/exhaustive-deps":"off"
+      "no-useless-concat": "off",
+      "react-hooks/exhaustive-deps": "off"
     }
   },
   "browserslist": {
